using the fractional space to center the 8 columns in the middle of the page

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -35,10 +35,22 @@ body {
 
 }
 
+/********************************
+* # grid-template-rows
+* 1st row 80vh height, 2nd row with min-content height, 3th row with 40vw height, the last 3 row with min-content height
+* 40vw refer to 40% of the window's width which is 80% each row
+*
+* # grid-template-columns
+* 1st column with 8rem for side bar, 8th columns with (min-content width as min width, and 14rem as max width)
+* When screen width is decreasing, either the second track, or the last one with 1 fr width will shrink its width first
+* Because they occupy the fractional space, the remaining space.
+*
+* Therefore, using the fractional space in order to center the 8 columns in the middle of the page.
+ */
 .container {
   display: grid;
-  grid-template-rows: 80vh min-content 40vw repeat(3, min-content); // 1st row 80vh height, 2nd row with min-content height,
-                                                                    // 3th row with 40vw height, the last 3 row with min-content height
-                                                                    // 40vw refer to 40% of the window's width which is 80% each row
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  grid-template-columns: 8rem 1fr repeat(8, minmax(min-content, 14rem)) 1fr;  // 1140px / 8 tracks = 14rem for fixed-width column
+
 }
 
