--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -44,13 +44,19 @@ body {
 * 1st column with 8rem for side bar, 8th columns with (min-content width as min width, and 14rem as max width)
 * When screen width is decreasing, either the second track, or the last one with 1 fr width will shrink its width first
 * Because they occupy the fractional space, the remaining space.
+* Also, using minmax(6rem, 1fr) to replace 1fr for fixed-width column
 *
 * Therefore, using the fractional space in order to center the 8 columns in the middle of the page.
  */
 .container {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
-  grid-template-columns: 8rem 1fr repeat(8, minmax(min-content, 14rem)) 1fr;  // 1140px / 8 tracks = 14rem for fixed-width column
+  grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start]
+                         minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];         // 1140px / 8 tracks = 14rem for fixed-width column
 
+  & > * {
+    padding: 40px;
+    font-size: 3rem;
+  }
 }
 
