--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -54,9 +54,9 @@ body {
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start]
                          minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end];         // 1140px / 8 tracks = 14rem for fixed-width column
 
-  & > * {
-    padding: 40px;
-    font-size: 3rem;
-  }
+  //& > * {
+  //  padding: 40px;
+  //  font-size: 3rem;
+  //}
 }
 
