--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -2,10 +2,54 @@
   &__pictures {
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
+    background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
+
+    // Create six by six grid
+    display: grid;
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    align-items: center;
   }
+
+  &__img--1 {
+    width: 100%;
+    grid-row: 2 / 6;                           // img will keep its aspect ratio from grid line 2-6
+    grid-column: 2 / 6;
+    box-shadow: 0 2rem 5rem rgba(#000, .1);
+  }
+
+  &__img--2 {
+    width: 115%;
+    grid-row: 4 / 6;
+    grid-column: 4 / 7;
+    z-index: 20;                                 // to display img
+    box-shadow: 0 2rem 5rem rgba(#000, .2);
+  }
+
 
   &__content {
     background-color: $color-grey-light-1;
     grid-column: col-start 5 / full-end;
+
+    padding: 6rem 8vw;
+  /*
+    // Using flex method
+    display: flex;
+    flex-direction: column;
+    justify-content: center;            // Center all flex element
+    align-items: flex-start;            // Solved - The button set as stretch by default
+  */
+
+    display: grid;
+    align-content: center;
+    justify-items: start;              // Solved - The button set as stretch by default
+
+
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+    margin-bottom: 4rem;
   }
 }
