--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -11,7 +11,7 @@
   display: grid;
   grid-template-rows: 1fr min-content 6rem 1fr;
   grid-template-columns: max-content;
-  grid-gap: 1.5rem;
+  grid-row-gap: 1.5rem;
   justify-content: center;
 
   &__logo {
@@ -27,7 +27,7 @@
   &__seenon-text {
     display: grid;
     grid-template-columns: 1fr max-content 1fr;
-    grid-gap: 1.5rem;
+    grid-column-gap: 1.5rem;
     align-items: center;
 
     font-size: 1.6rem;
@@ -48,6 +48,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 3rem;
     justify-items: center;
+    align-items: center;
 
     img {
       height: 2.5rem;
