--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -9,10 +9,27 @@
   justify-items: center;
   grid-row-gap: 2rem;
 
+  // let realtors section be row
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1/-1;
+  }
 
   &__list {
     display: grid;
     grid-template-columns: min-content max-content;
+    grid-colum-gap: 2rem;
+    grid-row-gap: 5vh;
+    grid-column-gap: 3vh;
+    align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-template-columns: repeat(3, min-content max-content);
+    }
+
+    @media only screen and (max-width: $bp-small) {
+      grid-template-columns: min-content max-content;
+    }
+
   }
 
   &__img {
