--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -22,6 +22,16 @@
   grid-row-gap: 1.5rem;
   justify-content: center;
 
+  // let header seenon-text section be row
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1/-1;
+  }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 5rem;
+  }
+
+
   &__logo {
     height: 3rem;
     justify-self: center;
