--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -3,12 +3,17 @@
     background-color: $color-primary;
     grid-column: full-start / col-end 4;
     background-image: linear-gradient(rgba($color-primary, .5), rgba($color-primary, .5)), url(../img/back.jpg);
-
+    background-size: cover;
     // Create six by six grid
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
     align-items: center;
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/-1;
+      padding: 6rem;
+    }
   }
 
   &__img--1 {
@@ -16,6 +21,11 @@
     grid-row: 2 / 6;                           // img will keep its aspect ratio from grid line 2-6
     grid-column: 2 / 6;
     box-shadow: 0 2rem 5rem rgba(#000, .1);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/5;
+      grid-row: 1/-1;
+    }
   }
 
   &__img--2 {
@@ -24,6 +34,11 @@
     grid-column: 4 / 7;
     z-index: 20;                                 // to display img
     box-shadow: 0 2rem 5rem rgba(#000, .2);
+
+    @media only screen and (max-width: $bp-medium) {
+      grid-row: 1/-1;
+      width: 100%;
+    }
   }
 
 
@@ -44,6 +59,10 @@
     align-content: center;
     justify-items: start;              // Solved - The button set as stretch by default
 
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/-1;
+      grid-row: 5/6;
+    }
 
   }
 
