Browser Support for CSS Grid

--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,21 +1,31 @@
+
+/*****************
+* grid-template-columns: repeat(3, 1fr);2
+* grid-template-rows: auto auto;            // implicit grid will automatically define
+ */
 .features {
   grid-column: center-start / center-end;
 
   margin: 15rem 0;
 
-  display: grid;                            // subgrid
-  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
-  //grid-template-columns: repeat(3, 1fr);2
-  //grid-template-rows: auto auto;            // implicit grid will automatically define
-  grid-gap: 6rem;
-
-  // the size of its content moved to the top
-  align-items: start;
-
-
+  @supports(display: grid) {
+    display: grid;                            // subgrid
+    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-gap: 6rem;
+    align-items: start;                       // the size of its content moved to the top
+  }
 }
 
 .feature {
+
+  float: left;
+  width: 33.33333%;
+  margin-bottom: 6rem;
+
+  @supports(display: grid) {
+    width: auto;
+    margin-bottom: 0;
+  }
 
   display: grid;
   grid-template-columns: min-content 1fr;   // min-content for svg, and 1 fr for the text
